@@ -1,3 +1,7 @@
+2006-09-11 Jens Tkotz <jens@peino.de> 1.5.5-svn-b10
+
+ * Fix: Use htmlspecialchars() also in <title>..</title>
+
 2006-09-11 Jens Tkotz <jens@peino.de> 1.5.5-svn-b9
 
  * Fix: Use htmlspecialchars() in <link rel="alternate" ...>
